--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,11 @@
 [[constraint]]
   name = "github.com/mattn/go-sqlite3"
   version = "1.2.0"
+
+[[constraint]]
+  name = "github.com/moby/moby"
+  version = "1.13.1"
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/net"
